# HAJC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd
HAJC/: HAJCLog.h
HAJC-Core/: Constant.h
HAJC-Core/ADT/: CommonTable.h
HAJC-Core/Chain/: EvolutionChain.cpp  EvolutionChain.h
HAJC-Core/EvolutionChain/: EvolutionChain.cpp  EvolutionChain.h
HAJC-Core/IR/: IR.cpp  IR.h  IRMath.h  Module.cpp  Module.h
HAJC-Core/Interface/: IBase.h
HAJC-Core/System/: CPUAttribute.h
HAJC/Interface/: IBase.h
cmake/: AddTest.cmake
doc/: HAJC-개요.txt  HAJC-기획서-개발.txt  HAJC-기획서-기반.txt  HAJC-기획서-정보수집.txt
include/HAJC-Core/ADT/: CommonTable.h
include/HAJC-Core/Chain/: Chain.h
include/HAJC-Core/IR/: IR.h
include/HAJC-Core/Interface/: IBase.h
include/HAJC-Core/System/: CPUAttributeTable.h
include/HAJC-Core/Utils/: HAJCCast.h
src/: CMakeLists.txt
src/HAJC-Core/Chain/: Chain.cpp
src/HAJC-Core/IR/: IR.cpp
src/HAJC-Core/System/: CPUAttributeTable.cpp
src/HAJC-Core/Utils/: HAJCLog.cpp
src/compiler/: CMakeLists.txt  CompBlock.h  CompInstruction.cpp  CompInstruction.h  CompTypes.h  Compiler.cpp  Compiler.h  CompilerDefs.h  CompinstructionDefs.h
src/datatypes/: NodeBase.h  String.h
src/exec/: CMakeLists.txt  hlangc.cpp
src/language/: AST.h  CMakeLists.txt  Parser.cpp  Parser.h
src/tools/: Argument.cpp  Argument.h  CMakeLists.txt  Debug.cpp  Debug.h  FileContext.h  Host.cpp  Host.h  Memory.cpp  Memory.h  Singleton.h  Utils.h
tests/: CMakeLists.txt
